--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,747 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  border: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --background-light: #ffffff;
+  --color-light: #000000;
+  --background-dark: #000000;
+  --color-dark: #ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.light-theme {
+  background-color: var(--background-light);
+  color: var(--color-light);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.dark-theme {
+  background-color: var(--background-dark);
+  color: var(--color-dark);
+}
+
+body {
+  background-color: var(--background);
+  color: var(--color);
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+}
+.toggle-icon {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 10px;
+  height: 10px;
+}
+
+
+
+.container{
+  display: flex;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
+.sidebar {
+  height: 100%;
+  background-color: #efeaea;
+  padding-top: 20px; 
+  width: 250px;
+  margin-right: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
+}
+
+.sidebar h2 {
+  color: #000000;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.form-container {
+  flex-grow: 1;
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.add-location-form {
+  display: flex;
+  justify-content: start;
+  gap: 100px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.add-location-form label {
+  color: #f57c00;
+  font-family: none;
+}
+
+.add-location-form .form-input {
+  width: 60%;
+  padding: 8px;
+  border: 1px solid #f57c00;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.add-location-form input[type="text"]:focus {
+  border-color: #f57c00;
+  outline: none;
+}
+
+input::placeholder {
+  color: #f57c00;
+}
+
+.add-location-form button:hover {
+  background-color: #f57c00;
+}
+
+.list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  border: 2px solid rgb(202, 198, 198);
+  border-radius: 5px;
+}
+
+.list-item {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+  background-color: #f57c00;
+  border-radius: 5px;
+}
+
+.list-link {
+  flex-grow: 1;
+  text-decoration: none;
+  color: #333;
+  font-size: 16px;
+}
+
+.submit-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px; 
+}
+
+.submit-buttons button {
+  padding: 10px 20px;
+  border: none; 
+  border-radius: 5px; 
+  cursor: pointer; 
+}
+
+.submit-buttons .clear {
+  background-color: #f0f0f0; 
+  color: #333;
+}
+
+.submit-buttons .update {
+  background-color: #c5be56; 
+  color: white; 
+}
+
+.submit-buttons .save {
+  background-color: #4caf50; 
+  color: white; 
+}
+
+.submit-buttons button:hover {
+  opacity: 0.9; 
+}
+
+.submit-buttons button:active {
+  opacity: 0.8; 
+}
+
+.add-location-form.underline{
+  border-bottom: 2px solid #f57c00;
+    padding-bottom: 30px;
+}
+
+.location-para {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+}
+.location-para .location-heading{
+  color: #f57c00;
+  font-family: none;
+  padding-left: 9px;
+}
+.location-para .location-icon {
+  font-size: 18px;
+  cursor: pointer;
+  color:#f57c00;
+}
+
+.office-div{
+  width: 18%;
+}
+
+/* Header section */
+.header {
+  padding: 5px;
+  margin: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #f57c00;
+  background-color: #ebe6e6;
+}
+.logo {
+  font-size: 24px;
+  margin-left: 24px;
+}
+
+.navbar {
+  display: flex;
+  flex-grow: 1;
+  justify-content: end;
+  margin-right: 34px;
+}
+
+.nav-list {
+  display: flex;
+  list-style: none;
+  gap: 45px;
+}
+.nav-item .inActive {
+  color: #f57c00;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.profile {
+  margin-right: 25px;
+}
+
+
+/* AMAZON PROJECT CSS  */
+
+.amazon-navbar{
+  background-color: #0f1111;
+  height: 60px;
+  color: #ffff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.nav-logo{
+  width: 100px;
+  height: 50px;
+}
+.amazon-logo{
+  background-image: url("./Images/amazon_logo.png");
+  background-size:cover;
+  width: 100%;
+  height: 50px;
+}
+.border{
+  border: 2px solid transparent;
+}
+.border:hover{
+  border: 2px solid orange;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 4px;
+}
+.add-icon {
+  display: flex;
+}
+.add-first{
+  font-size: 12px;
+  margin-left: 18px;
+}
+.add-sec {
+  font-size: 16px;
+  font-weight: 700;
+}
+.location-icon{
+  font-size: 18px;
+}
+
+.nav-search {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: pink;
+  width: 600px;
+  height: 40px;
+  /* padding: 6px;
+  margin: 4px;
+  border: 2px solid transparent; */
+  border-radius: 4px;
+}
+
+.search-select {
+  background-color: #f3f3f3;
+ width: 50px;
+ align-items: center;
+ border: none;
+ border-top-left-radius: 4px;
+ border-bottom-left-radius: 4px;
+}
+
+.search-input {
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+    padding-left: 10px;;
+}
+
+.search-icon {
+  width: 46px;
+  height: 87%;
+  padding-top: 5px;
+  font-size: 31px;
+  background-color: #ecc205;
+  color: #000000;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+span {
+  font-size: 10px;
+}
+
+.nav-second {
+  font-size: 14px;
+  font-weight: 700;
+}
+.nav-third {
+  font-size: 14px;
+  font-weight: 700;
+}
+.nav-signin:hover {
+  border: 2px solid orange;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 4px;
+}
+.nav-order:hover{
+  border: 2px solid orange;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 4px;
+}
+.nav-search:hover {
+  border: 2px solid orange;
+}
+.nav-cart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cart-icon {
+  font-size: 45px;
+}
+
+.nav-cart:hover {
+  border: 2px solid orange;
+  border-radius: 4px;
+}
+
+.panel {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  /* margin: 0 4px; */
+  font-size: 18px;
+  background-color: #222f3d;
+}
+
+.panel-start {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.panel-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  gap: 2px; 
+  cursor: pointer;
+}
+
+li.item-list {
+  list-style: none;
+  color: white;
+  font-size: 14px;
+  cursor: pointer;
+}
+.item-list:hover{
+  color: orange;;
+}
+p.panel-para {
+  font-size: 14px;
+  font-weight: 700;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Hero Section */
+
+.hero-section{
+  background-image: url("./Images/hero_image.jpg");
+  background-size: cover;
+  /* width: 100%; */
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: end;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hero-msg {
+  background-color: white;
+  color: black;
+  text-align: center;
+  padding: 11px;
+  margin-bottom: 25px;
+  font-size: 14px;
+  width: 1084px;
+}
+
+.hero-link {
+  color: cadetblue;
+  margin-left: 10px;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+/* Shop Section */
+.shop-section{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  background-color: #e2e7e6;
+  margin-top: 15px;
+  /* align-items: center; */
+}
+.box {
+  border: 2px solid transparent;
+  width: 23%;
+  height: 350px;
+  background-color: white;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+.box-img {
+  height: 250px;
+  background-size: cover;
+  padding: 2px;
+  margin-top: 8px;
+  margin-bottom: 23px;
+  background-repeat: no-repeat;
+}
+.box-content {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.box-content h1 {
+  font-size: 18px;
+  padding: 4px;
+  margin-top: 4px;
+}
+
+.box-content p {
+  font-size: 18px;
+  font-weight: 700;
+  color: cadetblue;
+  text-align: center;
+}
+
+/* Footer pannel */
+
+.footer-panel1 {
+  background-color: #37475a;
+  padding: 14px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  color: white;
+}
+
+.footer-panel2 {
+  background-color: #222f3d;
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  height: 275px;
+  padding-top: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
+  color: white;
+}
+
+.panel-list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-top: 14px;
+  cursor: pointer;
+  list-style: none;
+  font-size: 13px;
+}
+.footer-panel3 {
+  background-color: #222f3d;
+  border-top: 1px solid #4b6075ed;
+  display: flex;
+  justify-content: center;
+}
+.footer-panel3 .logo{
+  background-image: url('./Images/amazon_logo.png');
+  width: 100px;
+  height: 50px;
+  background-size: cover;
+}
+
+.footer-panel4 {
+  background-color: #101c2a;
+}
+
+.panel4-list {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    list-style: none;
+    color: white;
+    font-size: 10px;
+    padding-top: 20px;
+}
+
+.panel-4-para {
+  display: flex;
+  justify-content: center;
+  color: white;
+  font-size: 10px;
+  padding-top: 5px;
+  padding-bottom: 15px;
+}
+
+.active {
+  font-weight: bold;
+  /* border-bottom: 1px solid; */
+  color: cadetblue;
+}
+/* .active:hover{
+  color:cadetblue;
+} */
+
+.inActive:hover{
+  color:cadetblue;
+}
+
+
+/*  NETFLIX PROJECT CSS */
+
+.netflix-container{
+  background-image: url('./Images/background.jpg');
+  height: 75vh;
+  position: relative;
+}
+
+.netflix-container .netflix-box{
+  width: 100%;
+  height: 75vh;
+  /* opacity: 0.44;
+  background-color: black;  */
+  position: absolute;
+  top: 0;
+  color: white;
+}
+
+
+.netflix-logo {
+  width: 253px;
+  height: 69px;
+  margin-top: 25px;
+}
+
+.netflix-nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.button{
+  margin-top: 25px;
+  cursor: pointer;
+}
+
+button.english {
+  padding: 10px 29px;
+  color: white;
+  background-color: black;
+  border-radius: 5px;
+  border: 0px solid transparent;
+  cursor: pointer;
+}
+button.signin {
+  padding: 10px 29px;
+  color: white;
+  background-color: red;
+  margin-left: 15px;
+  border-radius: 5px;
+  border: 0px solid transparent;
+  cursor: pointer;
+}
+
+.netflix-hero {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  flex-direction: column;
+  /* height: 250px; */
+  margin-top: 100px;
+}
+.netflix-hero-text {
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+
+h1.hero-heading {
+  font-size: 60px;
+  font-weight: bolder;
+}
+h4.hero-heading-br {
+  display: flex;
+  justify-content: center;
+}
+
+.get-search {
+  display: flex;
+  gap: 21px;
+}
+
+input.get-search-input {
+  width: 370px;
+  padding: 13px;
+  border: 1px solid white;
+  border-radius: 5px;
+  background-color: rgb(23, 23, 23,0.7);
+}
+
+.get-started-btn{
+  width: 150px;
+  padding: 13px;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  background-color: red;
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+section.netflix-section {
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 4px solid rgb(23, 23, 23,0.7);
+}
+
+.section-child {
+  padding: 22px 80px;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  gap: 30px;
+}
+
+img.section-img {
+  width: 250px;
+}
+
+h2.section-heading {
+  font-size: 40px;
+  padding-bottom: 10px;
+}
+
+p.section-para {
+  font-size: 14px;
+}
+
+.section-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.faq {
+  background-color: black;
+  color: white;
+  border-top: 4px solid rgb(23, 23, 23, 0.7);
+  padding: 16px 83px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.questions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 81%;
+  background-color: rgb(23, 23, 23, 0.7);
+  padding: 23px;
+  margin-bottom: 10px;
+}
+
+footer.netflix {
+  color: white;
+  background-color: black;
+}
+
+.netflix-footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.footer-item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 16px 68px;
+  font-size: 13px;
+  cursor: pointer;
+}
+footer .qus {
+  font-size: 18px;
+  padding-left: 69px;
+}
+
+.duplicate {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding-bottom: 20px;
+  border-bottom: 4px solid rgb(23, 23, 23, 0.7);;
+  margin-bottom: 10px;
 }
